# tree-sitter-solidity

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: parser.c
wrapper/plugin/: index.js
