[package]
name = "tree-sitter-solidity"
description = "Solidity grammar for the tree-sitter parsing library"
version = "1.2.0"
keywords = ["incremental", "parsing", "Solidity"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/JoranHonig/tree-sitter-solidity"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.8"

[build-dependencies]
cc = "1.0"
